# ara-falke-marketplace-public

./: .gitignore
falke-bid-tools/: README.md  (+1 more)
falke-bid-tools/engines/scorecard/: conftest.py  pyproject.toml  requirements.txt
falke-bid-tools/engines/scorecard/config/: scorecard_config.yaml
falke-bid-tools/engines/scorecard/examples/: _make_sample_scoring_inputs.py  sample_aliases.json  sample_baseline.json  sample_gold_overrides.json  sample_qual_notes.json  sample_run.yaml
falke-bid-tools/engines/scorecard/scorecard/: __init__.py  audit.py  baseline_parser.py  cli.py  config.py  errors.py  exit_codes.py  matrix.py  mechanical.py  modeling.py  narratives.py  pack_schema.py  pipeline.py  render.py  run_pack.py  scoring.py  scoring_inputs.py  summary.py
falke-bid-tools/engines/scorecard/templates/: _make_baseline_template.py  _make_category_scores_template.py  _make_scoring_framework_template.py  baseline-template.xlsx  category-scores-template.xlsx  scorecard-summary-template.html  scorecard-template.html  scoring-framework-template.xlsx  style-spec.md
falke-bid-tools/engines/scorecard/tests/: conftest.py  test_audit.py  test_baseline_parser.py  test_cli_baseline_gate.py  test_cli_required_params.py  test_cli_scoring_gate.py  test_cli_sf_gate.py  test_config.py  test_create_matrix_compat.py  test_exit_contract.py  test_generic_matrix.py  test_integration_sample.py  test_mechanical.py  test_modeling.py  test_producer_live_compat.py  test_release_stage_contract.py  test_run_pack.py  test_scoring.py  test_scoring_inputs.py  test_summary.py  test_variable_field.py
(+96 files in other folders)
